[package]
name = "loadTesting"
version = "0.0.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "kt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.33", features = ["derive"] }
env_logger = "0.11.7"
futures = "0.3.31"
hdrhistogram = "7.5.4"
http-body-util = { version = "0.1.3" }
hyper = { version = "1.6.0", features = ["full"] }
hyper-rustls = { version = "0.27.5", default-features = false, features = [
    "logging",
    "ring",
    "tls12",
    "http1",
    "http2",
] }
hyper-util = { version = "0.1.10", features = ["full"] }
itertools = "0.14.0"
log = "0.4.27"
mlua = { version = "0.10.3", features = [
    "lua54",
    "vendored",
    "async",
    "macros",
] }
rustls = { version = "0.23.25", default-features = false, features = [
    "logging",
    "ring",
    "tls12",
] }
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
webpki-roots = "0.26.8"
